[package]
name = "gallery"
version = "0.1.0"
authors = ["may h <mehrabhoque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"
anyhow = "1.0.34"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates"]
